# VTKit

./: CMakeLists.txt  LICENSE.md  README.md  config.h.in
Mk4tcl/: CMakeLists.txt  _config.h  header.h  mk4tcl.h  mk4too.cpp
runtime/: runtime85.kit  runtime86.kit
runtime/runtime85.vfs/lib/tk8.5/: console.tcl
runtime/runtime85.vfs/lib/vfs/: starkit.tcl
runtime/runtime85.vfs/lib/vtk/: pkgIndex.tcl  vtk.tcl
runtime/runtime85.vfs/lib/vtkInfovis/: pkgIndex.tcl  vtkInfovis.tcl
runtime/runtime85.vfs/lib/vtkParallel/: pkgIndex.tcl  vtkParallel.tcl
runtime/runtime85.vfs/lib/vtkViews/: pkgIndex.tcl  vtkViews.tcl
runtime/runtime85.vfs/lib/vtkinteraction/: bindings.tcl  vtkinteraction.tcl
runtime/runtime85.vfs/lib/vtktesting/: pkgIndex.tcl  vtktesting.tcl
runtime/runtime86.vfs/: config.tcl
runtime/runtime86.vfs/lib/tk8.6/: pkgIndex.tcl
runtime/runtime86.vfs/lib/vfs/: zipvfs.tcl
runtime/runtime86.vfs/lib/vtk/: pkgIndex.tcl  vtk.tcl
runtime/runtime86.vfs/lib/vtkinteraction/: Interactor.tcl  pkgIndex.tcl  vtkinteraction.tcl
runtime/runtime86.vfs/lib/vtktesting/: grab.tcl  pkgIndex.tcl  vtktesting.tcl
tclkit/: CMakeLists.txt  Thumbs.db  kitInit.c  main.cxx  pwb.c  rechan.c  tclAppInit.c  tclkit.rc  vfs.c  winMain.c  winMain.old.c  zlib.c
